--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
     #searchBar { display: flex; align-items: center; gap: .5rem; margin: .5rem 0; }
     #search { padding: .3rem; flex: 1; border-radius: 4px; border: none; font-size: 13px; }
     #productList { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: .5rem; margin-top: .5rem; }
-    .product { background: var(--card); padding: .4rem; border-radius: 6px; text-align: center; font-size: 13px; }
+    .product {
+  background: linear-gradient(145deg, #111, #1a1a1a);
+  border: 1px solid rgba(255, 204, 0, 0.2);
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5),
+              inset 0 2px 6px rgba(255,255,255,0.05);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
     .product img { max-width: 100%; border-radius: 4px; }
     .product button { margin-top: .3rem; background: red; color: #fff; border: none; padding: .2rem .4rem; border-radius: 4px; cursor: pointer; font-size: 12px; }
     #addBtn { position: fixed; bottom: 20px; right: 20px; background: var(--accent); color: #111; font-size: 1.6rem; border: none; border-radius: 50%; width: 50px; height: 50px; cursor: pointer; box-shadow: 0 2px 6px rgba(0,0,0,0.3); z-index: 1002; }
@@ -123,7 +133,37 @@
     }
     .barcode-field .scan-icon:hover { color: #e6b800; }
 
-  </style>
+  
+.product img {
+  width: 100%;
+  height: 130px;
+  object-fit: cover;
+}
+.product .details {
+  padding: .5rem;
+}
+.product .details h3 {
+  margin: .2rem 0;
+  font-size: 14px;
+  color: var(--accent);
+}
+.product .details p {
+  margin: .1rem 0;
+  font-size: 12px;
+}
+.product button {
+  margin-top: .3rem;
+  background: var(--danger);
+  color: #fff;
+  border: none;
+  padding: .25rem .5rem;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 12px;
+  width: 100%;
+}
+
+</style>
 </head>
 <body>
   <header>
