--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Manager Dashboard</title>
   <style>
-    body {
+    html, body {
       margin:0;
       font-family:Arial, sans-serif;
       background:#fff;
       color:#111;
+      max-width:100%;
       overflow-x:hidden; /* prevent horizontal scroll */
     }
     header {
@@ -18,6 +19,7 @@
       display:flex;
       justify-content:space-between;
       align-items:center;
+      flex-wrap:wrap; /* responsive */
       box-shadow:0 2px 6px rgba(0,0,0,0.1);
       position:sticky;
       top:0;
@@ -29,19 +31,24 @@
       width:auto;
       object-fit:contain;
       display:block;
+      margin-left:10px; /* shift logo a bit to right */
     }
     header .left { display:flex; align-items:center; gap:1rem; }
     .hamburger { font-size:20px; cursor:pointer; color:#ffcc00; }
 
-    header input {
-      padding:.3rem .3rem .3rem 24px;
-      border:1px solid #ccc;
-      border-radius:4px;
-    }
     header .search-wrapper { position:relative; }
     header .search-wrapper .search-icon {
       position:absolute; left:8px; top:50%; transform:translateY(-50%);
       font-size:14px; color:#aaa;
+    }
+    header .search-wrapper input {
+      padding:.3rem .3rem .3rem 24px;
+      border:1px solid #ccc;
+      border-radius:4px;
+      width:180px; /* smaller search length */
+    }
+    @media (max-width:600px) {
+      header .search-wrapper input { width:120px; }
     }
 
     main { flex:1; }
@@ -50,6 +57,8 @@
       grid-template-columns:repeat(auto-fill, minmax(150px,1fr));
       gap:.5rem;
       padding:1rem;
+      width:100%;
+      box-sizing:border-box;
     }
 
     .product {
