--- a/index.html
+++ b/index.html
@@ -1,165 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Product Manager Dashboard</title>
   <style>
-    html, body {
-      margin:0;
-      font-family:Arial, sans-serif;
-      background:#fff;
-      color:#111;
-      max-width:100%;
-      overflow-x:hidden;
-    }
-    header {
-      background:#fff;
-      padding:.5rem 1rem;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      flex-wrap:wrap;
-      box-shadow:0 2px 6px rgba(0,0,0,0.1);
-      position:sticky;
-      top:0;
-      z-index:200;
-      width:100%;
-    }
-    header .logo {
-      height:40px;
-      width:auto;
-      object-fit:contain;
-      display:block;
-      margin-left:10px;
-    }
+    html, body { margin:0; font-family:Arial, sans-serif; background:#fff; color:#111; max-width:100%; overflow-x:hidden; }
+    header { background:#fff; padding:.5rem 1rem; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; box-shadow:0 2px 6px rgba(0,0,0,0.1); position:sticky; top:0; z-index:200; width:100%; }
+    header .logo { height:40px; width:auto; object-fit:contain; display:block; margin-left:10px; }
     header .left { position:relative; display:flex; align-items:center; gap:1rem; }
-    .hamburger { font-size:22px; cursor:pointer; color:#ffcc00; }
-
-    .menu {
-      position:absolute;
-      top:40px;
-      left:0;
-      background:#fff;
-      border-radius:8px;
-      box-shadow:0 2px 8px rgba(0,0,0,0.15);
-      display:none;
-      z-index:500;
-      min-width:160px;
-      flex-direction:column;
-      overflow:hidden;
-    }
-    .menu p {
-      margin:0; padding:0.6rem 1rem;
-      cursor:pointer;
-      font-size:14px;
-      color:#333;
-      display:flex;
-      align-items:center;
-      gap:8px;
-    }
+    .hamburger { font-size:20px; cursor:pointer; color:#ffcc00; }
+    .menu { position:absolute; top:48px; left:0; background:#fff; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.15); display:none; z-index:500; min-width:160px; flex-direction:column; }
+    .menu p { margin:0; padding:0.6rem 1rem; cursor:pointer; font-size:14px; color:#333; display:flex; align-items:center; gap:8px; }
     .menu p:hover { background:#ffcc00; color:#111; }
-
     header .search-wrapper { position:relative; }
-    header .search-wrapper .search-icon {
-      position:absolute; left:8px; top:50%; transform:translateY(-50%);
-      font-size:14px; color:#aaa;
-    }
-    header .search-wrapper input {
-      padding:.3rem .3rem .3rem 24px;
-      border:1px solid #ccc;
-      border-radius:4px;
-      width:180px;
-    }
-    @media (max-width:600px) {
-      header .search-wrapper input { width:120px; }
-    }
-
+    header .search-wrapper .search-icon { position:absolute; left:8px; top:50%; transform:translateY(-50%); font-size:14px; color:#aaa; }
+    header .search-wrapper input { padding:.3rem .3rem .3rem 24px; border:1px solid #ccc; border-radius:4px; width:180px; }
+    @media (max-width:600px) { header .search-wrapper input { width:120px; } }
     main { flex:1; }
-    #productList {
-      display:grid;
-      grid-template-columns:repeat(auto-fill, minmax(150px,1fr));
-      gap:.5rem;
-      padding:1rem;
-      width:100%;
-      box-sizing:border-box;
-    }
-
-    .product {
-      background:#fff;
-      border-radius:12px;
-      overflow:hidden;
-      box-shadow:0 2px 6px rgba(0,0,0,0.1);
-      text-align:center;
-    }
-    .product img {
-      display:block;
-      width:100%;
-      height:180px;
-      object-fit:cover;
-      cursor:pointer;
-    }
-
-    .product-info {
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:0.5rem 0.8rem;
-      font-size:14px;
-      font-weight:bold;
-    }
+    #productList { display:grid; grid-template-columns:repeat(auto-fill, minmax(150px,1fr)); gap:.5rem; padding:1rem; width:100%; box-sizing:border-box; }
+    .product { background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 2px 6px rgba(0,0,0,0.1); text-align:center; }
+    .product img { display:block; width:100%; height:180px; object-fit:cover; margin:0; border-radius:0; cursor:pointer; }
+    .product-info { display:flex; justify-content:space-between; align-items:center; padding:0.5rem 0.8rem; font-size:14px; font-weight:bold; }
     .product-info .name { color:#111; font-weight:normal; }
     .product-info .price { color:#111; }
-
-    #addBtn {
-      position:fixed;
-      bottom:20px;
-      right:20px;
-      background:#ffcc00;
-      color:#111;
-      border:none;
-      border-radius:50%;
-      width:50px;
-      height:50px;
-      font-size:1.6rem;
-      cursor:pointer;
-      box-shadow:0 2px 6px rgba(0,0,0,0.3);
-      z-index:250;
-    }
-
-    #modal, #editModal {
-      display:none;
-      position:fixed;
-      top:0; left:0; right:0; bottom:0;
-      background:rgba(0,0,0,0.6);
-      z-index:400;
-      align-items:center;
-      justify-content:center;
-    }
-    #modal .content, #editModal .content {
-      background:#fff;
-      padding:1rem;
-      border-radius:12px;
-      width:100%;
-      max-width:300px;
-      box-shadow:0 4px 10px rgba(0,0,0,0.2);
-    }
-    #modal input, #editModal input {
-      width:100%;
-      margin:.3rem 0;
-      padding:.4rem;
-      border:1px solid #ccc;
-      border-radius:6px;
-      box-sizing:border-box;
-    }
-
-    .action-btn {
-      padding:.4rem .8rem;
-      border:none;
-      border-radius:6px;
-      cursor:pointer;
-      margin:.2rem;
-    }
+    #addBtn { position:fixed; bottom:20px; right:20px; background:#ffcc00; color:#111; border:none; border-radius:50%; width:50px; height:50px; font-size:1.6rem; cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.3); z-index:250; }
+    #modal, #editModal { display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.6); z-index:400; align-items:center; justify-content:center; }
+    #modal .content, #editModal .content { background:#fff; padding:1rem; border-radius:12px; width:100%; max-width:320px; box-shadow:0 4px 10px rgba(0,0,0,0.2); }
+    #modal input, #editModal input { width:100%; margin:.3rem 0; padding:.4rem; border:1px solid #ccc; border-radius:6px; box-sizing:border-box; }
+    .input-field { position:relative; display:flex; align-items:center; }
+    .input-field input { flex:1; padding-right:5rem; }
+    .input-field .field-label { position:absolute; right:10px; font-size:12px; color:#888; pointer-events:none; }
+    #photoLabel, #editPhotoLabel { display:block; background:#ffcc00; color:#111; padding:.5rem; border-radius:6px; cursor:pointer; text-align:center; margin:.4rem 0; }
+    #photoName, #editPhotoName { font-size:12px; color:#555; display:block; text-align:center; }
+    .action-btn { padding:.4rem .8rem; border:none; border-radius:6px; cursor:pointer; margin:.2rem; }
     .action-btn.add { background:#ffcc00; color:#111; }
     .action-btn.cancel { background:#dc3545; color:#fff; }
   </style>
@@ -189,19 +63,206 @@
 
   <button id="addBtn" onclick="openModal()">＋</button>
 
-  <!-- Add and Edit modals would be included here as per the last working version -->
+  <!-- Add Modal -->
+  <div id="modal">
+    <div class="content">
+      <h3>Add Product</h3>
+      <form id="productForm">
+        <input type="text" id="name" placeholder="Product Name" required>
+        <input type="number" id="buyPrice" placeholder="Buy Price" required>
+        <input type="number" id="sellPrice" placeholder="Sell Price" required>
+        <input type="number" id="stock" placeholder="Stock Quantity" required>
+        <input type="text" id="barcode" placeholder="Barcode">
+        <input type="file" id="image" accept="image/*" required style="display:none">
+        <label for="image" id="photoLabel">📷 Add Photo</label>
+        <span id="photoName"></span>
+        <div>
+          <button type="submit" class="action-btn add">Add</button>
+          <button type="button" class="action-btn cancel" onclick="closeModal()">Cancel</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Edit Modal -->
+  <div id="editModal">
+    <div class="content">
+      <h3>Edit Product</h3>
+      <form id="editForm">
+        <input type="hidden" id="editId">
+        <div class="input-field"><input type="text" id="editName" required><span class="field-label">Name</span></div>
+        <div class="input-field"><input type="number" id="editBuyPrice" required><span class="field-label">Buy Price</span></div>
+        <div class="input-field"><input type="number" id="editSellPrice" required><span class="field-label">Sell Price</span></div>
+        <div class="input-field"><input type="number" id="editStock" required><span class="field-label">Stock</span></div>
+        <div class="input-field"><input type="text" id="editBarcode"><span class="field-label">Barcode</span></div>
+        <input type="file" id="editImage" accept="image/*" style="display:none">
+        <label for="editImage" id="editPhotoLabel">📷 Change Photo</label>
+        <span id="editPhotoName"></span>
+        <div>
+          <button type="submit" class="action-btn add">Update</button>
+          <button type="button" class="action-btn cancel" onclick="closeEditModal()">Cancel</button>
+          <button type="button" class="action-btn cancel" style="background:#555;" onclick="deleteProductFromModal()">Delete</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
   <script>
+    // === IndexedDB setup ===
+    let db;
+    const request = indexedDB.open("ProductManagerDB", 1);
+    request.onupgradeneeded = e => {
+      db = e.target.result;
+      const store = db.createObjectStore("products", { keyPath:"id", autoIncrement:true });
+      store.createIndex("name","name",{unique:false});
+      store.createIndex("barcode","barcode",{unique:false});
+    };
+    request.onsuccess = e => { db = e.target.result; renderProducts(); };
+
+    function saveProduct(product){
+      const tx=db.transaction("products","readwrite");
+      tx.objectStore("products").add(product);
+      tx.oncomplete=()=>renderProducts();
+    }
+    function updateProduct(product){
+      const tx=db.transaction("products","readwrite");
+      tx.objectStore("products").put(product);
+      tx.oncomplete=()=>renderProducts();
+    }
+    function deleteProduct(id){
+      const tx=db.transaction("products","readwrite");
+      tx.objectStore("products").delete(id);
+      tx.oncomplete=()=>renderProducts();
+    }
+
+    function renderProducts(filter=""){
+      const tx=db.transaction("products","readonly");
+      const store=tx.objectStore("products");
+      const req=store.getAll();
+      req.onsuccess=()=>{
+        const products=req.result;
+        const list=document.getElementById("productList");
+        list.innerHTML="";
+        products.filter(p=>
+          (p.name&&p.name.toLowerCase().includes(filter.toLowerCase()))||
+          (p.barcode&&p.barcode.includes(filter))
+        ).forEach(p=>{
+          const div=document.createElement("div");
+          div.className="product";
+          div.innerHTML=`
+            <img src="${p.image}" alt="${p.name}" onclick="openEditModal(${p.id})">
+            <div class="product-info">
+              <span class="name">${p.name}</span>
+              <span class="price">$${p.sellPrice}</span>
+            </div>`;
+          list.appendChild(div);
+        });
+      };
+    }
+
+    document.getElementById("search").addEventListener("input",e=>renderProducts(e.target.value));
+
+    // === Modal controls ===
+    const modal=document.getElementById("modal");
+    function openModal(){ modal.style.display="flex"; }
+    function closeModal(){ modal.style.display="none"; }
+    const editModal=document.getElementById("editModal");
+    function closeEditModal(){ editModal.style.display="none"; }
+
+    document.getElementById("image").addEventListener("change", e => {
+      const file = e.target.files[0];
+      document.getElementById("photoName").innerText = file ? file.name : "";
+    });
+    document.getElementById("editImage").addEventListener("change", e => {
+      const file = e.target.files[0];
+      document.getElementById("editPhotoName").innerText = file ? file.name : "";
+    });
+
+    document.getElementById("productForm").addEventListener("submit",e=>{
+      e.preventDefault();
+      const name=document.getElementById("name").value.trim();
+      const buyPrice=document.getElementById("buyPrice").value;
+      const sellPrice=document.getElementById("sellPrice").value;
+      const stock=document.getElementById("stock").value;
+      const barcode=document.getElementById("barcode").value;
+      const file=document.getElementById("image").files[0];
+      if(!file){alert("Image required");return;}
+      const reader=new FileReader();
+      reader.onload=()=>{
+        const product={name,buyPrice,sellPrice,stock,barcode,image:reader.result};
+        saveProduct(product);
+        e.target.reset(); document.getElementById("photoName").innerText="";
+        closeModal();
+      };
+      reader.readAsDataURL(file);
+    });
+
+    function openEditModal(id){
+      const tx=db.transaction("products","readonly");
+      const req=tx.objectStore("products").get(id);
+      req.onsuccess=()=>{
+        const p=req.result;
+        if(!p)return;
+        document.querySelector("#editModal h3").innerText = p.name;
+        document.getElementById("editId").value=p.id;
+        document.getElementById("editName").value=p.name;
+        document.getElementById("editBuyPrice").value=p.buyPrice;
+        document.getElementById("editSellPrice").value=p.sellPrice;
+        document.getElementById("editStock").value=p.stock;
+        document.getElementById("editBarcode").value=p.barcode||"";
+        document.getElementById("editPhotoName").innerText="";
+        editModal.style.display="flex";
+      };
+    }
+
+    document.getElementById("editForm").addEventListener("submit",e=>{
+      e.preventDefault();
+      const id=Number(document.getElementById("editId").value);
+      const name=document.getElementById("editName").value;
+      const buyPrice=document.getElementById("editBuyPrice").value;
+      const sellPrice=document.getElementById("editSellPrice").value;
+      const stock=document.getElementById("editStock").value;
+      const barcode=document.getElementById("editBarcode").value;
+      const file=document.getElementById("editImage").files[0];
+
+      const tx=db.transaction("products","readwrite");
+      const store=tx.objectStore("products");
+      const req=store.get(id);
+      req.onsuccess=()=>{
+        const product=req.result;
+        product.name=name; product.buyPrice=buyPrice; product.sellPrice=sellPrice; product.stock=stock; product.barcode=barcode;
+        if(file){
+          const reader=new FileReader();
+          reader.onload=()=>{
+            product.image=reader.result;
+            const tx2=db.transaction("products","readwrite");
+            tx2.objectStore("products").put(product);
+            tx2.oncomplete=()=>{renderProducts(); closeEditModal();};
+          };
+          reader.readAsDataURL(file);
+        } else {
+          const tx2=db.transaction("products","readwrite");
+          tx2.objectStore("products").put(product);
+          tx2.oncomplete=()=>{renderProducts(); closeEditModal();};
+        }
+      };
+    });
+
+    function deleteProductFromModal(){
+      const id=Number(document.getElementById("editId").value);
+      deleteProduct(id); closeEditModal();
+    }
+
     // === Menu toggle ===
     function toggleMenu(event){
       event.stopPropagation();
-      const menu=document.getElementById("menu");
-      menu.style.display=(menu.style.display==="block")?"none":"block";
+      const menu = document.getElementById("menu");
+      menu.style.display = (menu.style.display === "block") ? "none" : "block";
     }
-    document.addEventListener("click",function(e){
-      const menu=document.getElementById("menu");
+    document.addEventListener("click", function(e){
+      const menu = document.getElementById("menu");
       if(menu && !menu.contains(e.target) && !e.target.classList.contains("hamburger")){
-        menu.style.display="none";
+        menu.style.display = "none";
       }
     });
 
